tests/unit-fail-compilation/j044a.c.ref
j044a.c: In function ‘main’:
j044a.c:4:7: error: pointer value used where a floating point value was expected
       (double)p;
       ^
compilation terminated due to -Wfatal-errors.
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j044a.c to see commands run.
