tests/unit-fail-compilation/j044a.c
int main(void) {
      int x = 5;
      int *p = &x;
      (double)p;
}
